<resources>
    <string name="app_name">Hytone</string>
    <string name="facebook_app_id">587945268766520</string>
    <string name="fb_login_protocol_scheme">fb587945268766520</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="Pincode">Pincode</string>
    <string name="submit">Submit</string>
    <string name="background">background</string>
    <string name="next">Next</string>
    <string name="accept">Accept</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="this_is_a_short_three_line_description_for_this_feature_and_more">This is a short three-line description for this feature and more</string>
    <string name="feature_name_1">Feature Name 1</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="nickname">Nickname</string>
    <string name="no_of_dependents">No of Dependents</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="police_station">Police Station</string>
    <string name="post_office">Post Office</string>
    <string name="ownership_type">Ownership Type</string>
    <string name="profession">Profession</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="existing_emi_if_any">Existing EMI(if any)</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="upload_front">Upload Front</string>
    <string name="frontSide">frontSide</string>
    <string name="backside">backSide</string>
    <string name="upload_back">Upload Back</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="pan_number">Pan Number</string>
    <string name="voter_id_number">Voter ID Number</string>
    <string name="dl_number">DL Number</string>
    <string name="passport_number">Passport Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="statement">Statement</string>
    <string name="upload">Upload</string>
    <string name="asset_name">Asset Name</string>
    <string name="asset_value">Asset Value</string>
    <string name="make">Make</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="model">Model</string>
    <string name="reference_name">Reference Name</string>
    <string name="relation">Relation</string>
    <string name="greeting1">Welcome to Hytone</string>

</resources>
