<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profession"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/profession"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mi"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/monthly_income"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emi"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/existing_emi_if_any"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cName"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/company_name"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cAddress"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/company_address"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cLandmark"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/landmark"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cPs"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/police_station"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cPo"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/post_office"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cPincode"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00000000"
            android:fontFamily="@font/hind_medium"
            android:hint="@string/Pincode"
            android:inputType="number|phone"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>